- Allow to disable border and footer when switching to full screen

Improved Process Management: allow to copy any windows contents to internal clipboard

Improved ZRCP: Allow multiple simultaneous clients

Improved ZENG:
- Allow to connect more than two hosts
- Allow to disable sending input events (keyboard, joystick)

Improved ZX Spectrum Next emulation:
- Allow to boot NextZXOS v2.07l
- Updated machine id list

Fixed ZX Vision relocation windows
Fixed memory leak error when drawing Text Aventure Map
Fixed memory leak when loading .Z80 snapshots
Fixed error when no permissions writing to mmc, ide, trd, dsk, hilow: disable persistent writes when it happens
Fixed permissions when installing ZEsarUX on Linux: zxuno.flash and tbblue.mmc are now writable by anyone
Fixed Text Adventure Graphics rendering invalid characters
Fixed getting GAC objects
Fixed esxdos handler when using fopen flags: FA_READ + FA_WRITE + FA_OPEN_CREAT
Fixed ZRCP bug when closing connection (socket descriptor was kept open)
Fixed reading ESC key on curses driver

* As always, there are some other minor bugfixes and improvements

----------------------------------------


Version 10.3 - La Abadia del Crimen edition. 10 May 2023

There are lots of changes in this version, but some of them are remarkable:
- Added machines Amstrad PCW 8256, PCW 8512, CPC 6128, CPC 664
- Fixed 3" CF2 floppy disk emulation (used on +3, CPC, PCW): the floppy disk emulation has been rewritten from scratch and now is near perfect
- Lots of improvements on Debug CPU window
- Fixed almost all annoying audio clicks on Windows version (and on SDL audio driver on Linux)


The full changelog for this version 10.3 is:

* New things added:

Added Machine Amstrad PCW 8256
Added Machine Amstrad PCW 8512
Added Machine Amstrad CPC 6128
Added Machine Amstrad CPC 664
Added Visual Floppy to see floppy disk (+3, CPC, PCW, Betadisk) activity
Added DSK disk info menu: to get tracks and sectors of a disk