@@ -84,6 +84,7 @@
 #define ZSF_PCW_RAMBLOCK 58
 #define ZSF_COMMON_ROMBLOCK 59
 #define ZSF_CREATOR 60
+#define ZSF_FLASH_STATE 61
 
 #define MAX_ZSF_SNAPSHOT_SIZE 1024*1024*16
 
