@@ -59,6 +59,7 @@ Improved ZRCP: Allow multiple simultaneous clients
 Improved ZENG:
 - Allow to connect more than two hosts
 - Allow to disable sending input events (keyboard, joystick)
+- Sync flash state between instances
 
 Improved ZX Spectrum Next emulation:
 - Allow to boot NextZXOS v2.07l
